Closed
Bug 464481
Opened 17 years ago
Closed 17 years ago
npruntime sample does not compile anymore
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: arno, Assigned: arno)
References
Details
(Keywords: fixed1.9.1)
Attachments
(1 file)
|
614 bytes,
patch
|
jaas
:
review+
jst
:
superreview+
beltzner
:
approval1.9.1+
|
Details | Diff | Splinter Review |
Hi, npruntime sample does not compile:
/home/arno/mozilla/modules/plugin/sdk/samples/npruntime/np_entry.cpp:43:19: error: npupp.h: No such file or directory
/home/arno/mozilla/modules/plugin/sdk/samples/npruntime/np_entry.cpp:49: error: 'NPNetscapeFuncs' does not name a type
/home/arno/mozilla/modules/plugin/sdk/samples/npruntime/np_entry.cpp:97: error: expected initializer before 'NP_Initialize'
/home/arno/mozilla/modules/plugin/sdk/samples/npruntime/np_entry.cpp:184: error: expected initializer before 'NP_Shutdown'
make[4]: *** [np_entry.o] Error 1
make[4]: Leaving directory `/home/arno/mozilla/obj-i686-pc-linux-gnu/xulrunner/modules/plugin/sdk/samples/npruntime'
make[3]: *** [libs] Error 2
make[3]: Leaving directory `/home/arno/mozilla/obj-i686-pc-linux-gnu/xulrunner/modules/plugin/sdk/samples'
make[2]: *** [libs] Error 2
make[2]: Leaving directory `/home/arno/mozilla/obj-i686-pc-linux-gnu/xulrunner/modules/plugin/sdk'
make[1]: *** [tools] Error 2
make[1]: Leaving directory `/home/arno/mozilla/obj-i686-pc-linux-gnu/xulrunner/modules/plugin'
make: *** [default] Error 2
make: Leaving directory `/home/arno/mozilla/obj-i686-pc-linux-gnu/xulrunner/modules/plugin'
| Assignee | ||
Comment 1•17 years ago
|
||
Attachment #347805 -
Flags: review?(jst)
Attachment #347805 -
Flags: superreview?(jst)
Attachment #347805 -
Flags: review?(jst)
Attachment #347805 -
Flags: review+
| Assignee | ||
Updated•17 years ago
|
Assignee: nobody → arno
Keywords: checkin-needed
Updated•17 years ago
|
Attachment #347805 -
Flags: superreview?(jst) → superreview+
Attachment #347805 -
Flags: approval1.9.1?
Updated•17 years ago
|
Version: unspecified → Trunk
Comment 2•17 years ago
|
||
Comment on attachment 347805 [details] [diff] [review]
include npfunctions.h instead of npupp.h
a191=beltzner
Attachment #347805 -
Flags: approval1.9.1? → approval1.9.1+
landed on trunk (1.9.2), changeset bbf7d0e42c09
pushed to mozilla-1.9.1
http://hg.mozilla.org/releases/mozilla-1.9.1/rev/2e0b98901301
Keywords: fixed1.9.1
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•