Fix npruntime sample compile problem, npupp.h -> npfunctions.h. b=464481 r=josh sr=jst