modules/plugin/sdk/samples/npruntime/np_entry.cpp
@@ -40,7 +40,7 @@
 // Main plugin entry point implementation
 //
 #include "npapi.h"
-#include "npupp.h"
+#include "npfunctions.h"
 
 #ifndef HIBYTE
 #define HIBYTE(x) ((((uint32_t)(x)) & 0xff00) >> 8)
